src/objects/Student_Funds__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Funds</relationshipLabel>
        <relationshipName>Student_Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <referenceTo>Funding_Source__c</referenceTo>
        <relationshipLabel>Student Funds</relationshipLabel>
        <relationshipName>Student_Funds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_amount__c</fullName>
        <label>Funding amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Student Funds</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Student Funds Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>